[tool.poetry]
name = "gget"
version = "0.29.4"
description = "Efficient querying of genomic databases."
authors = ["Laura Luebbert <lauralubbert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.1"
pandas = "^1.0.0"
requests = "2.22.0"
ipython = "^8.0"
matplotlib = "^3.10.6"
mysql-connector-python = "8.0.32"
beautifulsoup4 = "4.10.0"
ipywidgets = "^8.1.7"
tqdm = "^4.67.1"
lxml = "^6.0.1"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
